# insure

./: README.md  index.html  package-lock.json  package.json  vite.config.js
anchor/: Anchor.toml  README.md  pubkey.txt
anchor/programs/travel_insurance/: Cargo.toml
anchor/programs/travel_insurance/src/: lib.rs
anchor/tests/: travel_insurance.ts
public/: flow.md
src/: App.css  App.jsx  index.css  main.jsx
src/components/: BuyInsurance.jsx  ClaimInsurance.jsx  TransactionHistory.jsx
src/contexts/: WalletContextProvider.jsx
